--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vscode-silq",
     "displayName": "vscode-silq",
-    "description": "Adds Silq language support for visual studio code.",
+    "description": "Adds silq language support for visual studio code.",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.38.0"
@@ -9,17 +9,48 @@
     "categories": [
         "Programming Languages"
     ],
+	"activationEvents": [
+		"onLanguage:silq"
+	],
+	"main": "./out/extension.js",
     "contributes": {
-        "languages": [{
-            "id": "silq",
-            "aliases": ["Silq", "silq"],
-            "extensions": ["slq"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "silq",
-            "scopeName": "source.silq",
-            "path": "./syntaxes/silq.tmLanguage.json"
-        }]
-    }
+        "languages": [
+            {
+                "id": "silq",
+                "aliases": [
+                    "Silq",
+                    "silq"
+                ],
+                "extensions": [
+                    "slq"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "silq",
+                "scopeName": "source.silq",
+                "path": "./syntaxes/silq.tmLanguage.json"
+            }
+        ]
+    },
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile",
+		"test": "node ./out/test/runTest.js"
+	},
+	"devDependencies": {
+		"@types/glob": "^7.1.1",
+		"@types/mocha": "^5.2.6",
+		"@types/node": "^10.12.21",
+		"@types/vscode": "^1.36.0",
+		"glob": "^7.1.4",
+		"mocha": "^6.1.4",
+		"typescript": "^3.3.1",
+		"tslint": "^5.12.1",
+		"vscode-test": "^1.0.2"
+	}
 }
