--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
                 "command": "silq.run",
                 "key": "f5",
                 "mac": "f5",
-                "when": "editorTextFocus"
+                "when": "editorLangId == silq"
             }
         ]
     },
