--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "homepage": "https://silq.ethz.ch",
     "displayName": "vscode-silq",
     "description": "Adds silq language support for visual studio code.",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "engines": {
         "vscode": "^1.37.0"
     },
@@ -67,17 +67,20 @@
                 "title": "Run Silq file in focus"
             }
         ],
-        "keybindings": [{
-            "command": "silq.run",
-            "key": "f5",
-            "mac": "f5",
-            "when": "editorLangId == silq"
-        },{
-            "command": "silq.trace",
-            "key": "f6",
-            "mac": "f6",
-            "when": "editorLangId == silq"
-        }]
+        "keybindings": [
+            {
+                "command": "silq.run",
+                "key": "f5",
+                "mac": "f5",
+                "when": "editorLangId == silq"
+            },
+            {
+                "command": "silq.trace",
+                "key": "f6",
+                "mac": "f6",
+                "when": "editorLangId == silq"
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "cp ../silq/silq ../silq/silq.exe ../silq/silq-osx bin/ && strip bin/silq bin/silq.exe && npm run compile",
